--- a/OpenGL-Proyect.vcxproj
+++ b/OpenGL-Proyect.vcxproj
@@ -182,6 +182,8 @@
     <None Include="Resources\Shaders\default\default.vert" />
     <None Include="Resources\Shaders\obj\default.frag" />
     <None Include="Resources\Shaders\obj\default.vert" />
+    <None Include="Resources\Shaders\twister\twist.vert" />
+    <None Include="Resources\Shaders\wavecolors\wave.frag" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
